# NorESMTinkerTool

./: .gitignore  01_generate_paramfile_coupled_ppe.py  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  main.yml
api/: index.html
api/aerosol_ppe_utils/: index.html
api/config_utils/: index.html
api/create_ppe/: index.html
api/generate_paramfile/: index.html
api/sampling/: index.html
api/setup/: index.html
api/utils/: index.html
cli/: index.html
config/: default_control_atm.ini  default_control_lnd.ini  default_output.ini  default_output_atm.ini  default_param_ranges.ini  default_simulation_setup.ini
config/default_config/: default_param_ranges.ini
config_examples/: coupled_ppe_parameter_info.ini  default_control_atm.ini  default_control_lnd.ini  default_simulation_setup.ini
configuration/: index.html
contributing/: index.html
description/: index.html
docs/: cli.md  configuration.md  contributing.md  description.md  examples.md  index.md  installation.md  usage.md
docs/api/: aerosol_ppe_utils.md  config_utils.md  create_ppe.md  generate_paramfile.md  sampling.md  setup.md  utils.md
examples/: index.html
input_file_templates/: template_simulation_setup.ini
input_files/: chem_mech.in
installation/: index.html
npen/setup/: case.py  namelist.py
scripts/: aerosol_ppe_cam_nl_updates.py  build_ppe_cases.py  generate_paramfile.py
search/: search_index.json
src/run/: build_ppe_NorESM_cases_PD.py
src/setup/: case.py  namelist.py
tests/: conftest.py  test_cli.py  test_create_paramfile.py
tinkertool/: __init__.py
tinkertool/scripts/: aerosol_ppe_cam_nl_updates.py
tinkertool/scripts/create_ppe/: cli.py  config.py  create_ppe.py  main.py
tinkertool/scripts/generate_paramfile/: __init__.py  cli.py  config.py  generate_paramfile.py  main.py  visualize_paramfile.py
tinkertool/scripts/postprocess/: config.py  main.py  reshape_rechunk.py
tinkertool/setup/: case.py  namelist.py  setup_cime_connection.py
tinkertool/utils/: CIME_interaction_utils.py  check_arguments.py  config_utils.py  csv_to_ini.py  custom_logging.py  logging.py  make_chem_in.py  make_land_parameterfiles.py  read_files.py  run_subprocess.py  sampling.py  type_check_decorator.py  write_out_namelist_opt_fincl.py  write_out_station_nl_string.py
usage/: index.html
usermods/aerosol_ppe/: aerosol_parameters.ini  aerosol_ppe_settings.ini  user_nl_cam.ini  user_nl_cam_with_history.ini  user_nl_cam_with_history_v3.ini
usermods/aerosol_ppe/input_files/: output_variables.csv  user_nl_cam.ini
usermods/aerosol_ppe/scripts/: aerosol_ppe_cam_nl_updates.py  build_oat_aerosol_ppe.py  build_oat_aerosol_ppe_00.py  check_oat_01.py  submit_oat_02.py  vizualize_paramfile.py
