[tool.poetry]
name = "tinkertool"
version = "0.2.1"
description = "Toolchain for setup and post processing of Perturbed parameter Ensembles in NorESM"
authors = ["Johannes <johannesfjeldsaa@gmail.com>" ,"Ove <ovehaugv@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
netcdf4 = "^1.6.3"
xarray = "^2024.9.0"
scipy = {version = "^1.14.1", optional = true}

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
jupyterlab = "^4.2.5"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.19"

[tool.poetry.extras]
sampling = ["scipy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create-ppe = "tinkertool.scripts.create_ppe.main:create_ppe_CLI"
build-ppe = "tinkertool.scripts.create_ppe.main:build_ppe_CLI"
check-build = "tinkertool.scripts.create_ppe.main:check_build_CLI"
prestage-ensemble = "tinkertool.scripts.create_ppe.main:prestage_ensemble_CLI"
submit-ppe = "tinkertool.scripts.create_ppe.main:submit_ppe_CLI"
generate-paramfile = "tinkertool.scripts.generate_paramfile.main:main"
aerosol-ppe-cam-nl = "tinkertool.scripts.aerosol_ppe_cam_nl_updates:main"
