[project]
name = "tinkertool"
version = "0.2.1"
description = "Toolchain for setup and post processing of Perturbed parameter Ensembles in NorESM"
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [
	{name = "Johannes", email = "johannesfjeldsaa@gmail.com"},
	{name = "Ove", email = "ovehaugv@outlook.com"},
]
license = {text = "MIT"}


dependencies = [
	"netcdf4 >=1.7.2,<2.0",
	"xarray >=2024.9.0,<2026.0",
	"typer >=0.20.0,<1.0.0",
]

[project.optional-dependencies]
sampling = ["scipy >=1.14.1,<2.0", "xarray >=2024.9.0,<2026.0"]
plotting = ["matplotlib >=3.10.1,<4.0", "seaborn >=0.13.2,<1.0.0"]

[project.scripts]
create-ppe = "tinkertool.scripts.create_ppe.main:create_ppe_CLI"
build-ppe = "tinkertool.scripts.create_ppe.main:build_ppe_CLI"
check-build = "tinkertool.scripts.create_ppe.main:check_build_CLI"
prestage-ensemble = "tinkertool.scripts.create_ppe.main:prestage_ensemble_CLI"
submit-ppe = "tinkertool.scripts.create_ppe.main:submit_ppe_CLI"
generate-paramfile = "tinkertool.scripts.generate_paramfile.main:main"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
jupyterlab = "^4.2.5"
pytest = "^9.0.1"
pytest-cov = "^7.0.0"
coverage = "^7.13.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.19"
mkdocstrings = {extras = ["python"], version = "^1.0.3"}

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

